--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "My title",
+    "title": "Florida power outages",
     "docData": "",
-    "path": "2016/05/blah"
+    "path": "2016/09/florida-power"
 }
