--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "promise-polyfill": "^6.0.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
